# NJUST.Coursework02

./: .gitignore  CMakeLists.txt
include/: auth.h  db_storage.h  general_func.h  list.h  list_search.h  login.h  menu.h  menu_edit.h  register.h  search_list.h  storage.h  student.h  student_input.h  ui.h  ui_auth.h  user.h  utils.h
src/: auth.c  db_storage.c  general_func.c  list.c  list_search.c  login.c  main.c  menu.c  menu_edit.c  register.c  search_list.c  storage.c  student.c  student_input.c  ui.c  ui_auth.c  utils.c
